--- a/file.css
+++ b/file.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Otomanopee One', sans-serif;
-    margin: ;
+    margin:0 ;
     }
     h1{
         font-size: 50px;
@@ -17,19 +17,21 @@ body{
     .half-width img{
         width:100%
     }
-    .hal-width{width:50%;
-     padding-left:2%;}
-    .hal-width img{
-        width:80%
-    }
-
     .link-button{
         text-decoration: none;
         background-image: linear-gradient(orange, tomato);
         padding: 10px 40px;
     }
-    
-    .top-baner{background-image: url(New/eee-py.jpg);
-        background-repeat: no-repeat;}
-    
+    .top-banner{
+        background-image: url(New/eee-py.jpg);
+        background-repeat: no-repeat;
+    }
+
+    .dream{background-image: url(New/eee\ copy.jpg);
+        background-repeat: no-repeat;
+        background-position: top right;}
+       
+    {
+        display: flex;
+        margin-bottom: 20px ;}
     
